Add German verbs CSV, enhance flashcard UI, and improve data fetching logic
- Added a new CSV file containing German verbs with their English translations.
- Updated index.html to include an image element for displaying related images.
- Enhanced main.js to fetch nouns and their details, including image retrieval from Wikipedia.
- Improved CSS styles for better layout and visual appeal, including adjustments to button styles and flashcard dimensions.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <p id="plural">aaaaaaaaaaa</p>
             </div>
             <div class="back">
+                <img id="img" src="" alt="">
                 <h2 id="english">bbbbbbbbb</h2>
             </div>
 
@@ -25,8 +26,8 @@
         </div>
 
         <div id="buttons">
-            <button id="know" class="buttons">Know</button>
-            <button id="tolearn" class="buttons">Don't Know</button>
+            <button id="know" class="buttons"><b>Know</b> </button>
+            <button id="tolearn" class="buttons"><b>Don't Know</b></button>
         </div> 
     </div>
     
